--- a/FinalAssignment/FinalAssignment/FinalAssignment.csproj
+++ b/FinalAssignment/FinalAssignment/FinalAssignment.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkipyList.cs" />
+    <Compile Include="SortDeez.cs" />
     <Compile Include="StackBetter.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
