--- a/FinalAssignment/FinalAssignment/FinalAssignment.csproj
+++ b/FinalAssignment/FinalAssignment/FinalAssignment.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchDeez.cs" />
     <Compile Include="SkipyList.cs" />
     <Compile Include="SortDeez.cs" />
     <Compile Include="StackBetter.cs" />
